# CapstoneEcommerceAgent

./: .bedrock_agentcore.yaml  .env  .gitignore  README.md  deploy_agent.sh  main.py  main_ui_cognito.py  metrics_logger.py  pyproject.toml  requirements.txt
.bedrock_agentcore/capstone_agent/: dependencies.hash
.bedrock_agentcore/capstone_ecommerce_agent_cognito/: Dockerfile
Docs/: 01-Solution-Overview.md  02-Architecture-Specification.md  03-Multi-Agent-Design.md  04-Data-Model-Schema.md  05-Authentication-Authorization.md  06-Deployment-Guide.md  07-API-Reference.md  08-Performance-Optimization.md  09-Monitoring-Observability.md  10-Testing-Evaluation.md  README.md
agent/: __init__.py  chart_agent.py  kb_agent.py  orch_agent.py  orch_agent_local.py  sql_agent.py
evaluation/: agent_evaluation_dataset.jsonl  create_bedrock_model_eval_job.sh  kb_eval_questions_groundtruths.jsonl  kb_evaluation_dataset_filled.jsonl  rag-eval-ragasmetrics.py
evaluation/ragas_eval_results/: ragas_eval_detailed_20251222_163018.csv  ragas_eval_detailed_20251222_164504.csv  (+2 more)
generated-diagrams/: Capstone-ECommerce-Agent.xml
lambda/: CapstoneEcommerceCognitoPreTokenGeneration.py  deploy_lambda.sh  product_reviews_api-schema.json  product_reviews_api.py
prereqs/: CLOUDFRONT_SETUP.md  MEMORY_STRATEGY_SETUP.md  agent_role.json  db_security_group_setup.sh  deploy_Agentcore_gateway.sh  deploy_dynamo_db.sh  infrastructure.env  setup_infrastructure.sh
ui/: ARCHITECTURE.md  Dockerfile  __init__.py  ecs-task-role-policy.json  orch_web_app_cognito.py  orch_web_app_local.py  requirements.txt
(+28 files in other folders)
